--- a/theme/musculine/css/musculine.less
+++ b/theme/musculine/css/musculine.less
@@ -64,7 +64,7 @@ a,a:hover, a:active{text-decoration: none; color:@txt_dark}
 .bg-image{width:100%;width:100vw; height:400px; margin-top:60px; background-position:center center; background-size: cover; background-repeat: no-repeat;margin-left:-30px;position: relative; z-index: -1  }
 .tradition{background-image: url('../img/tradition.jpg')}
 .naturel{background-image: url('../img/naturel.jpg')}
-.energetique{background-image: url('../img/energetique.jpg')}
+.energetique{background-image: url('../img/energetiqueBis.jpg')}
 .energetique2{background-image: url('../img/energetique2.jpg'); margin-bottom: 60px}
 .footer-img{background-image: url('../img/footer.jpg'); margin-bottom:-30px}
 
