modify img musculine

--- a/theme/musculine/css/musculine.less
+++ b/theme/musculine/css/musculine.less
@@ -65,6 +65,7 @@ a,a:hover, a:active{text-decoration: none; color:@txt_dark}
 .tradition{background-image: url('../img/tradition.jpg')}
 .naturel{background-image: url('../img/naturel.jpg')}
 .energetique{background-image: url('../img/energetiqueBis.jpg')}
+.energetiqueBis{background-image: url('../img/energetiqueBis.jpg')}
 .energetique2{background-image: url('../img/energetique2.jpg'); margin-bottom: 60px}
 .footer-img{background-image: url('../img/footer.jpg'); margin-bottom:-30px}
 
