add css classes button cana.org

--- a/theme/cana_org/css/cana.less
+++ b/theme/cana_org/css/cana.less
@@ -75,6 +75,42 @@ h2.titre-block{
 h3.titre-block{
 	font-family: 'HelveticaText Black';
 }
+
+.flex-center {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
+
+.button {
+	//color: white;
+    text-decoration: none;
+    display: inline-block;
+    padding: 3px 17px;
+    //border: 2px solid white;
+    border-radius: 32px;
+    text-transform: uppercase;
+	cursor: pointer;
+	transition: all 0.2s;
+}
+
+.red {
+	color: #c13625;
+	border: 2px solid #b71501;
+}
+
+.red:hover {
+	background: #b71501;
+    color: white;
+    transition: all 0.2s;
+}
+
+a:hover {
+	text-decoration: none;
+
+}
+
 /*FIXES*/
 .rubedo-block-contentContribution{min-height:0 !important}
 /*NAVIGATION*/
