--- a/theme/cana_org/css/cana.less
+++ b/theme/cana_org/css/cana.less
@@ -83,6 +83,8 @@ h3.titre-block{
 	align-items: center;
 }
 
+.mt4{margin-top:4rem}.mt5{margin-top:5rem}.mt6{margin-top:6rem}
+
 .button {
 	//color: white;
     text-decoration: none;
