add css classes general cana.org

--- a/theme/cana_org/templates/blocks/mailingListSuscribe.html
+++ b/theme/cana_org/templates/blocks/mailingListSuscribe.html
@@ -6,7 +6,7 @@
 </div>
 
 <!-- Modale affichée en cliquant sur le link ci-dessus -->
-<div id="{{block.code || modal_newsletter}}" class="modal fade" aria-hidden="true">
+<div id="{{block.code}}" class="modal fade" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content">
             <div class="modal-body">
