--- a/theme/cte/templates/blocks/contentDetail/proposition.html
+++ b/theme/cte/templates/blocks/contentDetail/proposition.html
@@ -209,7 +209,7 @@
 							        <!--Type de public -->
 								<div ng-repeat="public in contentDetailCtrl.content.fields.publics track by $index" class="text-center">
 	
-									<p><a href="#bottom" ng-click="contentDetailCtrl.content.public = public; contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription =true">- {{rubedo.translate(public,public)}} </a></p><!--Attention, ce label dépend du format de type de contenu-->
+									<p><a href="#bottom" ng-click="contentDetailCtrl.content.public = public; contentDetailCtrl.content.service = false; contentDetailCtrl.showInscription =true">- {{public}}@{{rubedo.translate(public,public)}} </a></p><!--Attention, ce label dépend du format de type de contenu-->
 								</div>
 						</div>						
 						<!--si un seul public au service-->
@@ -224,7 +224,7 @@
 							        <!--Type de public -->
 							<div ng-if="showTypeServiteurs" ng-repeat="public in contentDetailCtrl.content.fields.public_service track by $index" class="text-center">
 
-								<p><a href="#bottom" ng-click="contentDetailCtrl.content.public = public;contentDetailCtrl.content.service = true; contentDetailCtrl.showInscription =true">- {{public}}@{{rubedo.translate(public,public)}}</a></p><!--Attention, ce label dépend du format de type de contenu-->
+								<p><a href="#bottom" ng-click="contentDetailCtrl.content.public = public;contentDetailCtrl.content.service = true; contentDetailCtrl.showInscription =true">- {{rubedo.translate(public,public)}}</a></p><!--Attention, ce label dépend du format de type de contenu-->
 							</div>
 						</div>
 						<div class="col-sm-12 padding" ng-if="(contentDetailCtrl.content.fields.paimentOption.paimentOption).indexOf('complement') > -1">
