--- a/theme/cluny/templates/blocks/navigation.html
+++ b/theme/cluny/templates/blocks/navigation.html
@@ -7,49 +7,41 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a scroll-position="scroll2" ng-if="blockConfig.displayRootPage && blockConfig.imageFile" class="navbar-brand " ng-href="{{menuCtrl.menu.url}}">
-                <img   ng-src="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{height:'60px',mode:'boxed'})}}" ng-if="rubedo.current.page.id!=blockConfig.rootPage || (rubedo.current.page.id==blockConfig.rootPage&&scroll2>=500)"/>
-                <img   ng-src="{{rubedo.imageUrl.getUrlByMediaId('5954bcb73965886261c47040' ,{height:'60px',mode:'boxed'})}}" ng-if="rubedo.current.page.id==blockConfig.rootPage&&scroll2<500"/>
+            <a  ng-if="blockConfig.imageFile" class="navbar-brand " ng-href="{{menuCtrl.menu.url}}">
+                <img ng-src="{{rubedo.imageUrl.getUrlByMediaId(blockConfig.imageFile ,{height:'60px',mode:'boxed'})}}" />
                <!-- -->
             </a>
         </div>
         <div class="container">
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <!--<li id="push-button" class="home-button visible-xs-block" ng-click="ToggleNav()"><a>Æ</a></li>-->
-                     <li ng-repeat="page in menuCtrl.pagesBlocks" ng-class="{active:menuCtrl.currentRouteleine.indexOf(page.url) > -1, dropdown:page.blocks.length>1}">
-                            <!--<a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}">{{page.text}}</a>-->
-                        <a ng-if="page.blocks.length<=1  " ng-href="{{page.url}}">{{page.title |uppercase}}</a> 
-        
-                    <!--<a href="/fr/accueil/festival" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown">Festival</a>-->
-                        <a ng-if="page.blocks.length>1" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{page.title}}</a>
-                        <ul ng-if="page.blocks.length>1" class="dropdown-menu" role="menu">
-                            <li ng-repeat="bloc in page.blocks | orderBy :'order' track by $index" class="" >
-                        <!--<a ng-if="menuCtrl.currentRouteleine.indexOf(page.url) > -1" ng-href="{{page.url}}#{{bloc.title | split:'/':0}}">{{bloc.title | split:'/':1}}</a>-->
-                                <a  ng-href="{{page.url}}?page={{bloc.code}}">{{bloc.title | split:'//':0}}</a>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-<!--                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right">
                     <li ng-if="blockConfig.displayRootPage"><a ng-if="blockConfig.displayRootPage" ng-href="{{menuCtrl.menu.url}}">{{menuCtrl.menu.text}}</a></li>
-                    <li ng-repeat="page in menuCtrl.menu.pages track by $index"
-                        ng-class="{active:menuCtrl.currentRouteline.indexOf(page.url+'/') > -1 ||  menuCtrl.currentRouteline.indexOf(page.url,menuCtrl.currentRouteline.length-page.url.length) > -1, dropdown:page.pages&&blockConfig.menuLevel>1}">
-                        <a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}"> {{page.text}}</a>
-                        <a ng-if="page.pages&&blockConfig.menuLevel>1" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{page.text}} <span class="caret"></span></a>
-                        <ul ng-if="page.pages&&blockConfig.menuLevel>1" class="dropdown-menu" role="menu">
-                            <li ng-if="!blockConfig.disableLevelOne" ng-class="{active:rubedo.current.page.id==page.id}"><a ng-href="{{page.url}}">{{page.text}}</a></li>
-                            <li ng-if="!blockConfig.disableLevelOne" class="divider"></li>
-                            <li ng-repeat="subpage in page.pages track by $index" ng-class="{active:menuCtrl.currentRouteline.indexOf(subpage.url+'/') > -1 ||  menuCtrl.currentRouteline.indexOf(subpage.url,menuCtrl.currentRouteline.length-subpage.url.length) > -1}">
-                                <a ng-href="{{subpage.url}}">{{subpage.text}}</a>
-                            </li>
-                        </ul>
-                    </li>
--->                 <li ng-controller="LanguageMenuController as languageMenuCtrl" class="languageMenu">
+                    
+                    
+                    <li ng-repeat="page in menuCtrl.pagesBlocks" ng-class="{active:menuCtrl.currentRouteline.indexOf(page.url) > -1, dropdown:page.blocks.length>1}">
+						<!--<a ng-if="!page.pages||blockConfig.menuLevel<=1" ng-href="{{page.url}}">{{page.text}}</a>-->
+    					<a ng-if="page.blocks.length<=1  " ng-href="{{page.url}}">{{page.title}}</a>
+    	
+    				<!--<a href="/fr/accueil/festival" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown">Festival</a>-->
+    					<a ng-if="page.blocks.length>1" class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{page.title}} <span class="caret"></span></a>
+    					<ul ng-if="page.blocks.length>1" class="dropdown-menu" role="menu">
+    						<li ng-repeat="bloc in page.blocks | orderBy :'order' track by $index" class="" >
+    					<!--<a ng-if="menuCtrl.currentRouteleine.indexOf(page.url) > -1" ng-href="{{page.url}}#{{bloc.title | split:'/':0}}">{{bloc.title | split:'/':1}}</a>-->
+    							<a  ng-href="{{page.url}}#{{bloc.code}}">{{bloc.title | split:'//':0}}</a>
+    						</li>
+    					</ul>
+    				</li>
+                    
+                    
+                    
+                    
+                    
+                    
+                    <li ng-controller="LanguageMenuController as languageMenuCtrl" class="languageMenu">
                         <a  class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{languageMenuCtrl.currentLang.lang |uppercase}} <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="lang in languageMenuCtrl.languages track by $index" > <!--ng-if="(lang.lang !='de' ) || rubedo.current.user"-->
-                                <a ng-click="alert('coco')" href>
+                                <a ng-click="languageMenuCtrl.changeLang(lang.lang)" href>
                                     <i ng-if="languageMenuCtrl.showFlags"><img ng-src="{{languageMenuCtrl.getFlagUrl(lang.flagCode)}}" alt="{{lang.flagCode}}"/></i>
                                     {{lang.lang |uppercase}}
                                 </a>
