--- a/theme/cluny/templates/blocks/navigation.html
+++ b/theme/cluny/templates/blocks/navigation.html
@@ -37,10 +37,10 @@
                         <a  class="dropdown-toggle cursor-as-pointer" data-toggle="dropdown" >{{languageMenuCtrl.currentLang.lang |uppercase}} <span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
                             <li ng-repeat="lang in languageMenuCtrl.languages track by $index" > <!--ng-if="(lang.lang !='de' ) || rubedo.current.user"-->
-                                <a ng-href="{{menuCtrl.changeLangUrl(lang.lang)}}">
+                                <div ng-click="menuCtrl.changeLangUrl(lang.lang)">
                                     <i ng-if="languageMenuCtrl.showFlags"><img ng-src="{{languageMenuCtrl.getFlagUrl(lang.flagCode)}}" alt="{{lang.flagCode}}"/></i>
                                     {{lang.lang |uppercase}}
-                                </a>
+                                </div>
                             </li>
                         </ul>
                     </li>
