--- a/theme/cte/css/cte.less
+++ b/theme/cte/css/cte.less
@@ -1037,6 +1037,8 @@ header.content.prop>div{text-align: center; vertical-align: middle; padding-bott
   right: 0;
   width:100%;
   padding-right: 0;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
 }
 .list-tags{position: absolute; top:-3em; color: white; opacity: 0.9; right: 5px;}
 @media screen and (min-width:@min_sm){
