--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -1,4 +1,4 @@
-<div ng-if="rubedo.current.user" ng-controller="AdminProductsListController as userOrdersCtrl">
+<div ng-if="rubedo.current.user" ng-controller="AdminProductsListController as ctrl">
     <div class="panel panel-default">
         <table class="table table-striped table-hover">
             <thead>
