--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -3,7 +3,7 @@
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
-                    <th>{{ rubedo.translate('Blocks.UserOrders.OrderNumber') }} {{userOrdersCtrl.lodatedio}}</th>
+                    <th>Nom du produit</th>
                     <th>{{ rubedo.translate('Blocks.OrderDetails.Table.Name') }}</th>
                     <th>{{ rubedo.translate('Blocks.UserOrders.Date') }}</th>
                     <th>{{ rubedo.translate('Blocks.UserOrders.Price') }}</th>
@@ -13,12 +13,12 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in userOrdersCtrl.orders track by $index">
-                    <td>{{ item.orderNumber }}</td>
-                    <td>{{ item.userName }}</td>
-                    <td>{{ item.createTime*1000| date: "shortDate" }}</td>
+                <tr ng-repeat="item in ctr.products track by $index">
+                    <td><img ng-src="{{rubedo.imageUrl.getUrlByMediaId(item.fields.image ,{width:'50px',mode:'boxed'})}}" alt="product img"></td>
+                    <td>{{ item.text }}</td>
+                    <td>{{ item.status }}</td>
+                    <td>{{ item.lastUpdateTime*1000| date: "shortDate" }}</td>
                     <td>{{ item.finalPrice|number : 2 }} €</td>
-                    <td>{{ item.shipper.name }}</td>
                     <td>{{ rubedo.translate('Payment.Means.'+ item.paymentMeans, item.paymentMeans) }}</td>
                     <td> {{ rubedo.translate('Blocks.UserOrders.Status.'+item.status,item.status) }}</td>
                     <td ng-if="userOrdersCtrl.orderDetailPageUrl">
