--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -13,7 +13,7 @@
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="item in ctr.products track by $index">
+                <tr ng-repeat="item in ctrl.products track by $index">
                     <td><img ng-src="{{rubedo.imageUrl.getUrlByMediaId(item.fields.image ,{width:'50px',mode:'boxed'})}}" alt="product img"></td>
                     <td>{{ item.text }}</td>
                     <td>{{ item.status }}</td>
