--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -1,14 +1,14 @@
 <div ng-if="rubedo.current.user" ng-controller="AdminProductsListController as ctrl">
+    
+    <div class="search_container">
+        <select ng-model="ctrl.search_field">
+            <option ng-repeat="field in ctrl.fields" ng-value="field.id">{{field.label}}</option>
+        </select>
+        <input name="search" type="text" ng-model="ctrl.search_text">
+    </div>
+    <i class="fa fa-spinner fa-spin" ng-if="ctrl.loading"></i>
+    
     <div class="panel panel-default">
-
-        <div class="search_container">
-            <select>
-                <option ng-repeat="field in ctrl.fields"></option>
-            </select>
-            <input name="search" type="text" ng-model="ctrl.search_text">
-        </div>
-        <i class="fa fa-spinner fa-spin" ng-if="ctrl.loading"></i>
-
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
