--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -6,7 +6,7 @@
         </select>
         <input name="search" type="text" ng-model="ctrl.search_text">
     </div>
-    <i class="fa fa-spinner fa-spin" ng-if="ctrl.loading"></i>
+    <i class="fa fa-spinner fa-pulse" ng-if="ctrl.loading"></i>
     
     <div class="panel panel-default">
         <table class="table table-striped table-hover">
@@ -23,7 +23,7 @@
             </thead>
             <tbody>
                 <tr ng-repeat="item in ctrl.products track by $index">
-                    <td><img ng-src="{{rubedo.imageUrl.getUrlByMediaId(item.fields.image ,{width:'50px',mode:'boxed'})}}" alt="product img"></td>
+                    <td><!-- <img ng-src="{{rubedo.imageUrl.getUrlByMediaId(item.fields.image ,{width:'50px',mode:'boxed'})}}" alt="product img"> --></td>
                     <td>{{ item.text }}</td>
                     <td>{{ item.status }}</td>
                     <td>{{ item.lastUpdateTime*1000| date: "shortDate" }}</td>
