--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -4,40 +4,28 @@
         <select ng-model="ctrl.search_field" class="search field">
             <option ng-repeat="field in ctrl.fields" ng-value="field.id">{{field.label}}</option>
         </select>
-        <select ng-if="ctrl.search_field == 'typeId'" ng-model="ctrl.search_product_type" class="search field_product_type">
-            <option ng-repeat="field in ctrl.productTypes" ng-value="field.id">{{field.label}}</option>
+        <select ng-if="ctrl.search_field && ctrl.subfields[ctrl.search_field]" ng-model="ctrl.search_subfield" class="search subfield">
+            <option ng-repeat="field in ctrl.subfields[ctrll.search_field]" ng-value="field.id">{{field.label}}</option>
         </select>
         <input name="search" type="text" ng-model="ctrl.search_text" ng-keypress="ctrl.search($event)">
     </div>
     <i class="fa fa-spinner fa-pulse" ng-if="ctrl.loading"></i>
     
+    <div class="info">{{ctrl.products.length}} / {{ctrl.allProducts.length}} produits</div>
     <div class="panel panel-default">
         <table class="table table-striped table-hover">
             <thead>
                 <tr>
                     <th></th>
                     <th>Nom du produit</th>
-                    <th>{{ rubedo.translate('Blocks.UserOrders.Date') }}</th>
-                    <th>{{ rubedo.translate('Blocks.UserOrders.Price') }}</th>
-                    <th>{{ rubedo.translate('Blocks.UserOrders.Shipper') }}</th>
-                    <th>{{ rubedo.translate('Blocks.UserOrders.PaymentMeans') }}</th>
                     <th>{{ rubedo.translate('Blocks.UserOrders.Status') }}</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="item in ctrl.products track by $index">
-                    <td><img ng-if="ctrl.products.length < 70" ng-src="{{rubedo.imageUrl.getUrlByMediaId(item.fields.image ,{width:'50px',mode:'boxed'})}}" alt="product img"></td>
+                    <td><img ng-if="ctrl.products.length < 70 && item.fields.image" ng-src="{{rubedo.imageUrl.getUrlByMediaId(item.fields.image ,{width:'50px',mode:'boxed'})}}" alt="product img"></td>
                     <td>{{ item.text }}</td>
                     <td>{{ item.status }}</td>
-                    <td>{{ item.lastUpdateTime*1000| date: "shortDate" }}</td>
-                    <td>{{ item.finalPrice|number : 2 }} €</td>
-                    <td>{{ rubedo.translate('Payment.Means.'+ item.paymentMeans, item.paymentMeans) }}</td>
-                    <td> {{ rubedo.translate('Blocks.UserOrders.Status.'+item.status,item.status) }}</td>
-                    <td ng-if="userOrdersCtrl.orderDetailPageUrl">
-                        <a ng-href="{{ userOrdersCtrl.orderDetailPageUrl }}?order={{ item.id }}" >
-                            <button ng-click="handleCSEvent('orderClick')" class="btn btn-default"><span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> {{ rubedo.translate('Blocks.UserOrders.ViewDetails')}}</button>
-                        </a>
-                    </td>
                 </tr>
             </tbody>
         </table>
