--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -11,7 +11,7 @@
     </div>
     <i class="fa fa-spinner fa-pulse" ng-if="ctrl.loading"></i>
     
-    <div class="info">{{ctrl.products.length}} / {{ctrl.allProducts.length}} produits</div>
+    <div class="info" ng-if="!ctrl.loading">{{ctrl.products.length}} / {{ctrl.allProducts.length}} produits</div>
     <div class="panel panel-default">
         <table class="table table-striped table-hover">
             <thead>
