add boutique products administration

--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -5,7 +5,7 @@
             <option ng-repeat="field in ctrl.fields" ng-value="field.id">{{field.label}}</option>
         </select>
         <select ng-if="ctrl.search_field && ctrl.subfields[ctrl.search_field]" ng-model="ctrl.search_subfield" class="search subfield">
-            <option ng-repeat="field in ctrl.subfields[ctrll.search_field]" ng-value="field.id">{{field.label}}</option>
+            <option ng-repeat="field in ctrl.subfields[ctrl.search_field]" ng-value="field.id">{{field.label}}</option>
         </select>
         <input name="search" type="text" ng-model="ctrl.search_text" ng-keypress="ctrl.search($event)">
     </div>
