--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -25,6 +25,7 @@
                 <tr ng-repeat="item in ctrl.products track by $index">
                     <td><img ng-if="ctrl.products.length < 70 && item.fields.image" ng-src="{{rubedo.imageUrl.getUrlByMediaId(item.fields.image ,{width:'50px',mode:'boxed'})}}" alt="product img"></td>
                     <td>{{ item.text }}</td>
+                    <td>{{ item.productProperties.sku }}</td>
                     <td>{{ item.status }}</td>
                 </tr>
             </tbody>
