--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -18,6 +18,8 @@
                 <tr>
                     <th></th>
                     <th>Nom du produit</th>
+                    <th>SKU</th>
+                    <th data-toggle="tooltip" title="Some text">Stock</th>
                     <th>{{ rubedo.translate('Blocks.UserOrders.Status') }}</th>
                 </tr>
             </thead>
@@ -26,6 +28,7 @@
                     <td><img ng-if="ctrl.products.length < 70 && item.fields.image" ng-src="{{rubedo.imageUrl.getUrlByMediaId(item.fields.image ,{width:'50px',mode:'boxed'})}}" alt="product img"></td>
                     <td>{{ item.text }}</td>
                     <td>{{ item.productProperties.sku }}</td>
+                    <td>{{ item.stock.stock }}</td>
                     <td>{{ item.status }}</td>
                 </tr>
             </tbody>
