--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -9,7 +9,6 @@
         </select>
         <input name="search" type="text" ng-model="ctrl.search_text" ng-keypress="ctrl.search($event)">
     </div>
-    <i class="fa fa-spinner fa-pulse" ng-if="ctrl.loading"></i>
     
     <div class="info" ng-if="!ctrl.loading">{{ctrl.products.length}} / {{ctrl.allProducts.length}} produits</div>
     <div class="panel panel-default">
@@ -31,6 +30,7 @@
                     <td data-toggle="tooltip" title="{{ item.productProperties.sku }}">{{ item.details.stock }}</td>
                     <td>{{ item.status }}</td>
                 </tr>
+                <tr ng-if="ctrl.loading"><i class="fa fa-spinner fa-pulse"></i></tr>
             </tbody>
         </table>
     </div>
