--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -30,7 +30,7 @@
                     <td data-toggle="tooltip" title="{{ item.productProperties.sku }}">{{ item.details.stock }}</td>
                     <td>{{ item.status }}</td>
                 </tr>
-                <tr ng-if="ctrl.loading"><i class="fa fa-spinner fa-pulse"></i></tr>
+                <tr ng-if="ctrl.loading"><i class="fa fa-spinner fa-pulse" ng-if="ctrl.loading"></i></tr>
             </tbody>
         </table>
     </div>
