add boutique products administration

--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -28,7 +28,7 @@
                     <td>{{ item.text }}</td>
                     <td>{{ item.productProperties.sku }}</td>
                     <td data-toggle="tooltip" title="{{ item.productProperties.sku }}">{{ item.details.stock }}</td>
-                    <td>{{ item.status }}</td>
+                    <td>{{ item.online }}</td>
                 </tr>
             </tbody>
         </table>
