--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -7,7 +7,7 @@
         <select ng-if="ctrl.search_field && ctrl.subfields[ctrl.search_field]" ng-model="ctrl.search_subfield" class="search subfield" ng-change="ctrl.search('skip')">
             <option ng-repeat="field in ctrl.subfields[ctrl.search_field]" ng-value="field.id">{{field.label}}</option>
         </select>
-        <input name="search" type="text" ng-model="ctrl.search_text" ng-keypress="ctrl.search($event)">
+        <input ng-if="ctrl.field_types[ctrl.search_field] != 'boolean'" name="search" type="text" ng-model="ctrl.search_text" ng-keypress="ctrl.search($event)">
     </div>
     
     <div class="info" ng-if="!ctrl.loading">{{ctrl.products.length}} / {{ctrl.allProducts.length}} produits</div>
