--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -55,12 +55,17 @@ div.raccourcis_container {
 div.raccourci {
     background-color: #d5c5b5;
     padding: 0.5rem 1rem;
+    margin-right: 1rem;
     border-radius: 50px;
     color: white;
     cursor: pointer;
     font-size: 1rem;
     font-family: calibri;
     box-shadow: #6f6860 0 1px 3px;
+}
+
+div.raccourci_active {
+    box-shadow: inset #6f6860 0 1px 3px;
 }
 /* ================================ */
 /* ================================ */
