add boutique products administration

--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -69,6 +69,13 @@ div.raccourci {
 div.raccourci_active {
     box-shadow: inset #6f6860 0 1px 3px;
 }
+
+
 /* ================================ */
+/*          RECHERCHE               */
 /* ================================ */
+
+.search_container {
+    margin-bottom: 2rem;
+}
 </style>
