--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -64,10 +64,12 @@ div.raccourci {
     font-size: 1rem;
     font-family: calibri;
     box-shadow: #6f6860 0 1px 3px;
+    transition: all 0.2s;
 }
 
 div.raccourci_active {
     box-shadow: inset #6f6860 0 1px 3px;
+    transition: all 0.2s;
 }
 
 
