--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -24,14 +24,14 @@
                     <th></th>
                     <th>Nom du produit</th>
                     <th>SKU</th>
-                    <th>Stock</th>
+                    <th ng-click="ctrl.sortProducts('details/stock')">Stock</th>
                     <th>{{ rubedo.translate('Blocks.UserOrders.Status') }}</th>
                 </tr>
             </thead>
             <tbody>
                 <tr ng-repeat="item in ctrl.products track by $index">
                     <td><img ng-if="ctrl.products.length < 70 && item.fields.image" ng-src="{{rubedo.imageUrl.getUrlByMediaId(item.fields.image ,{width:'50px',mode:'boxed'})}}" alt="product img"></td>
-                    <td ng-click="ctrl.goToContentPage(item.id)">{{ item.text }}</td>
+                    <td class="clickable"><a ng-click="ctrl.goToContentPage(item.id, item.online)" href>{{ item.text }}</a></td>
                     <td>{{ item.productProperties.sku }}</td>
                     <td data-toggle="tooltip" title="{{ item.productProperties.sku }}" ng-click="ctrl.copyToClipboard(item.productProperties.sku)">{{ item.details.stock }}</td>
                     <td>{{ item.online }}</td>
@@ -79,5 +79,17 @@ div.raccourci_active {
 
 .search_container {
     margin-bottom: 2rem;
+}
+
+/* ================================ */
+/*          TABLEAU                 */
+/* ================================ */
+
+th {
+    cursor: pointer;
+}
+
+.clickable {
+    cursor: pointer;
 }
 </style>
