add boutique products administration

--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -40,7 +40,7 @@
         </table>
     </div>
 
-    <div class="loading" ng-if="ctrl.loading"><i class="fa fa-spinner fa-pulse"></i></div>
+    <div class="loading" ng-if="ctrl.loading"><i class="fa fa-spinner fa-pulse loading"></i></div>
 </div>
 
 
@@ -92,5 +92,11 @@ th {
 
 .clickable {
     cursor: pointer;
+}
+
+.loading {
+    font-size: 3rem;
+    text-align: center;
+    margin: auto;
 }
 </style>
