add boutique products administration

--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -7,13 +7,14 @@
 
     <h2>Recherche avancée</h2>
     <div class="search_container">
-        <select ng-model="ctrl.search_field" class="search field">
+        <select ng-model="ctrl.search_field" class="search field first">
             <option ng-repeat="field in ctrl.fields" ng-value="field.id">{{field.label}}</option>
         </select>
-        <select ng-if="ctrl.search_field && ctrl.subfields[ctrl.search_field]" ng-model="ctrl.search_subfield" class="search subfield" ng-change="ctrl.search('skip')">
+        <select ng-if="ctrl.search_field && ctrl.subfields[ctrl.search_field]" ng-model="ctrl.search_subfield" class="search field" ng-change="ctrl.search('skip')">
             <option ng-repeat="field in ctrl.subfields[ctrl.search_field]" ng-value="field.id">{{field.label}}</option>
         </select>
-        <input ng-if="ctrl.field_types[ctrl.search_field] != 'boolean'" name="search" type="text" ng-model="ctrl.search_text" ng-keypress="ctrl.search($event)">
+        <input ng-if="ctrl.field_types[ctrl.search_field] != 'boolean'" class="field" name="search" type="text" ng-model="ctrl.search_text" ng-keypress="ctrl.search($event)">
+        <button ng-click="ctrl.search('skip')"><i class="fa fa-arrow-right"></i></button>
     </div>
     
     <div class="info" ng-if="!ctrl.loading">{{ctrl.products.length}} / {{ctrl.allProducts.length}} produits</div>
@@ -80,6 +81,27 @@ div.raccourci_active {
 
 .search_container {
     margin-bottom: 2rem;
+}
+
+.field {
+    height: 32px;
+}
+.field:active, .field:focus {
+    outline: none;
+}
+
+select.field {
+    padding-left: 0.7rem;
+    border: none;
+    background-color: #d5c5b5;
+}
+
+select.first {
+    border-radius: 50px 0 0 50px;
+}
+
+input.field {
+    border: 1px solid #bdaea0;
 }
 
 /* ================================ */
