--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -10,10 +10,10 @@
         <select ng-model="search_field" class="search field first">
             <option ng-repeat="field in ctrl.fields" ng-value="field.id">{{field.label}}</option>
         </select>
-        <select ng-if="ctrl.search_field && ctrl.subfields[ctrl.search_field]" ng-model="ctrl.search_subfield" class="search field" ng-change="ctrl.search('skip')">
-            <option ng-repeat="field in ctrl.subfields[ctrl.search_field]" ng-value="field.id">{{field.label}}</option>
+        <select ng-if="search_field && ctrl.subfields[search_field]" ng-model="ctrl.search_subfield" class="search field" ng-change="ctrl.search('skip')">
+            <option ng-repeat="field in ctrl.subfields[search_field]" ng-value="field.id">{{field.label}}</option>
         </select>
-        <input ng-if="ctrl.field_types[ctrl.search_field] != 'boolean'" class="field" name="search" type="text" ng-model="ctrl.search_text" ng-keypress="ctrl.search($event)">
+        <input ng-if="ctrl.field_types[search_field] != 'boolean'" class="field" name="search" type="text" ng-model="ctrl.search_text" ng-keypress="ctrl.search($event)">
         <button class="btn btn-primary field fa fa-arrow-right" ng-click="ctrl.search('skip')"></button>
     </div>
     
