--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -39,7 +39,7 @@
                     <td class="clickable" ng-click="ctrl.goToContentPage(item.id, item.online)">
                         {{ item.text }}
                         <span class="badge badge-success" ng-if="item.online">en ligne</span>
-                        <span class="badge" ng-else>hors ligne</span>
+                        <span class="badge" ng-if="!item.online">hors ligne</span>
                     </td>
                     <td>{{ item.productProperties.sku }}</td>
                     <td data-toggle="tooltip" title="{{ item.productProperties.sku }}" ng-click="ctrl.copyToClipboard(item.productProperties.sku)">{{ item.details.stock }}</td>
