add boutique products administration

--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -35,7 +35,10 @@
             </thead>
             <tbody>
                 <tr ng-repeat="item in ctrl.products track by $index">
-                    <td><img ng-if="ctrl.products.length < 70 && item.fields.image" ng-src="{{rubedo.imageUrl.getUrlByMediaId(item.fields.image ,{width:'50px',mode:'boxed'})}}" alt="product img"></td>
+                    <td>
+                        <img ng-if="ctrl.products.length < 70 && item.fields.image && ctrl.loading_one != item.id" ng-src="{{rubedo.imageUrl.getUrlByMediaId(item.fields.image ,{width:'50px',mode:'boxed'})}}" alt="product img">
+                        <div class="fa fa-spinner fa-pulse" ng-if="ctrl.loading_one == item.id"></div>
+                    </td>
                     <td class="clickable" ng-click="ctrl.goToContentPage(item.id, item.online)">
                         {{ item.text }}
                         <span class="badge badge-success" ng-if="item.online" ng-click="ctrl.changeStatus($event, item.id, 'offline')">en ligne</span>
