--- a/theme/boutique/templates/blocks/adminProductsList.html
+++ b/theme/boutique/templates/blocks/adminProductsList.html
@@ -66,7 +66,9 @@
             <div class="modal-content">
                 <div class="modal-body">
 
-                    <table class="stocks">
+                    <h2>{{ ctr.current_product.text }}</h2>
+
+                    <table class="table table-striped table-hover stocks">
                         <thead>
                             <th>SKU</th>
                             <th>Prix</th>
