add css bg-img to menu page

--- a/theme/bethanien/css/menu.css
+++ b/theme/bethanien/css/menu.css
@@ -67,7 +67,7 @@ table.menu td.menu_name {
 }
 
 td.menu_name span {
-  background-color: #eee;
+  background-color: white;
   padding-right: 0.5rem;
 }
 
