--- a/theme/bethanien/css/menu.css
+++ b/theme/bethanien/css/menu.css
@@ -1,6 +1,6 @@
-/* le titre du menu */
+/* le conteneur du menu */
 ng-include.ng-scope > div:nth-child(1) > div:nth-child(2) > div:nth-child(1) > div:nth-child(1) {
-  background-image: url("https://drive.google.com/uc?id=1vuNgrpTVbwHXwv25Gc57u7PxWMv0kAVB&export=view"), url("https://drive.google.com/uc?id=1GCtAS-MDQzjEqGsm79AzeFaB1uVw7zol&export=view");
+  background-image: url("/dam?media-id=5bf6a796396588d3585e5a8b"), url("https://drive.google.com/uc?id=1GCtAS-MDQzjEqGsm79AzeFaB1uVw7zol&export=view");
   background-origin: left bottom, left top;
   background-size: contain, contain;
   background-repeat: no-repeat, repeat;
@@ -13,8 +13,10 @@ ng-include.ng-scope > div:nth-child(1) > div:nth-child(2) > div:nth-child(1) > d
   line-height: 1.4em;
   margin: 200px auto;
   background-color: white;
+  box-shadow: #523d32 0 2px 13px 2px;
 }
 
+/* le titre du menu */
 h1 {
   margin-top: 10rem;
   padding-bottom: 5rem;
